Initial check in

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section data-markdown="content.md"
+					 data-separator="^\[NEXT SECTION\]"
+					 data-separator-vertical="^\[NEXT\]"
+					 data-separator-notes="^\_note_"/>
 			</div>
 		</div>
 
