--- a/index.html
+++ b/index.html
@@ -37,6 +37,39 @@
 						</p>
 						<p>
 					</section>
+					<section data-menu-title="Presenter">
+						<h2>Human Centric Architecture</h2>
+
+						<table class="bio-table">
+						  <tr>
+						    <td style="float: left">
+							![portrait](images/jacky.jpg)
+							<br>
+							<font style="font-weight: bold; color: white">Jacky Chan</font>
+							<br>
+							<br>
+						    </td>
+						    <td style="float: left; color: white; font-size: 0.7em;">
+
+							Executive Director - Architecture
+							<br/>
+							<a style="color: cyan" href="https://www.jpmorganam.com.hk">J.P. Morgan Asset & Wealth Management</a>
+							<p/>
+							Design Thinking Trainer
+							<br/>
+							<a style="color: cyan" href="https://www.experiencepoint.com">ExperiencePoint</a>
+							<p/>
+							Interested in
+							<ul>
+								<li>Machine Learning</li>
+								<li>Design Thinking</li>
+								<li>AppSec</li>
+							</ul>
+
+						    </td>
+						  </tr>
+						</table>
+					</section>
 				</section>
 			</div>
 		</div>
