--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<table class="bio-table">
 						  <tr>
 						    <td style="float: left">
-							![portrait](images/jacky.jpg)
+							<img src="./images/jacky.jpg" style="height:350px;"/>
 							<br>
 							<font style="font-weight: bold; color: white">Jacky Chan</font>
 							<br>
