--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
 						  </tr>
 						</table>
 					</section>
+					<section data-menu-title="What is Architecture">
+						<h2>What is Architecture?</h2>
+					</section>
 				</section>
 			</div>
 		</div>
