--- a/index.html
+++ b/index.html
@@ -75,11 +75,18 @@
 					</section>
 					<section data-menu-title="What is" data-background="https://www.publickey1.jp/blog/11/agileconf1102.jpg" data-background-opacity="0.2">
 						<h2>Architecture is</h2>
-						<p style="color:yellow" align="left"><strong>Shared understanding of the important stuff about a system</strong></p>
+						<p style="color:yellow" align="center"><strong>Shared understanding of the important stuff about a system</strong></p>
 						<br>
 						<i>~Martin Fowler</i>
 						<br>
 						<a style="color: cyan" href="https://martinfowler.com/ieeeSoftware/whoNeedsArchitect.pdf">Who needs an Architect?</a>
+					</section>
+					<section data-menu-title="What is Human Centric Design" data-background-image="http://7-themes.com/data_images/out/5/6785678-daft-punk-wallpaper.jpg" data-background-opacity="1">
+						<h2>What is Human Centric Design?</h2>
+					</section>
+					<section data-menu-title="Human Centric Design is" data-background-image="http://7-themes.com/data_images/out/5/6785678-daft-punk-wallpaper.jpg" data-background-opacity="1">
+						<h2>Human Centric Design is</h2>
+						<p style="color:yellow" align="center">a holistic understanding of the <strong>interests or needs of humans</strong> who will receive or use the product, service or system.</p>
 					</section>
 				</section>
 			</div>
