--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
 						<a style="color: cyan" href="https://martinfowler.com/ieeeSoftware/whoNeedsArchitect.pdf">Who needs an Architect?</a>
 					</section>
 					<section data-menu-title="What is Human Centric Design" data-background-image="http://7-themes.com/data_images/out/5/6785678-daft-punk-wallpaper.jpg" data-background-opacity="1">
-						<h2>What is Human Centric Design?</h2>
+						<h2>What is</h2>
+						<h2>Human Centric Design?</h2>
 					</section>
 					<section data-menu-title="Human Centric Design is" data-background-image="http://7-themes.com/data_images/out/5/6785678-daft-punk-wallpaper.jpg" data-background-opacity="1">
 						<h2>Human Centric Design is</h2>
