--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						  </tr>
 						</table>
 					</section>
-					<section data-menu-title="What is Architecture" data-background-image="https://cdn.pixabay.com/photo/2015/12/03/00/58/architect-1073599_960_720.jpg" data-background-opacity="1">
+					<section data-menu-title="What is Architecture" data-background-image="http://abstracthdwallpapers.files.wordpress.com/2012/07/black-and-white-architecture-photography-2560x1600.jpg" data-background-opacity="1">
 						<h2>What is Architecture?</h2>
 					</section>
 					<section data-menu-title="What is" data-background="https://www.publickey1.jp/blog/11/agileconf1102.jpg" data-background-opacity="0.2">
