--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 						    <td style="float: left">
 							<h2>What is</h2>
 						    </td>
-						    <td style="float: left; color: white; font-size: 0.7em;">
-							<h2>Human Centric Design?</h2>
+						    <td style="float: left; color: yellow">
+							<h2>&nbsp;&nbsp;Human Centric Design?</h2>
 						    </td>
 						  </tr>
 						</table>
