--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 						    <td style="float: left">
 							<h2>What is</h2>
 						    </td>
-						    <td style="float: left; color: yellow">
+						    <td style="float: right; color: yellow">
 							<h2>&nbsp;&nbsp;Human Centric Design?</h2>
 						    </td>
 						  </tr>
