--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 							<h2>What is</h2>
 						    </td>
 						    <td style="float: right; color: yellow">
-							<h2>&nbsp;&nbsp;Human Centric Design?</h2>
+							<p style="color:yellow" align="center"><strong>HUMAN CENTER DESIGN?</strong></p>
 						    </td>
 						  </tr>
 						</table>
