--- a/index.html
+++ b/index.html
@@ -90,8 +90,9 @@
 						    <td style="float: left">
 							<h2>What is</h2>
 						    </td>
-						    <td style="float: right; color: yellow">
-							<p style="color:yellow" align="center"><strong>HUMAN CENTER DESIGN?</strong></p>
+						    <td style="float: right">
+							<h2 style="color:yellow">HUMAN CENTER DESIGN?</h2>
+							<p style="color:yellow" align="right"><strong>HUMAN CENTER DESIGN?</strong></p>
 						    </td>
 						  </tr>
 						</table>
