--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 						<h2></h2>
 						<h2></h2>
 						<h2></h2>
+						<h2></h2>
 						<h2>What is Architecture?</h2>
 					</section>
 					<section data-menu-title="What is" data-background="https://www.publickey1.jp/blog/11/agileconf1102.jpg" data-background-opacity="0.2">
@@ -91,8 +92,8 @@
 							<h2>What is</h2>
 						    </td>
 						    <td style="float: right">
-							<h2 style="color:yellow">HUMAN CENTER DESIGN?</h2>
-							<p style="color:yellow" align="right"><strong>HUMAN CENTER DESIGN?</strong></p>
+							<h2 style="color:yellow" align="right">HUMAN CENTRIC</h2>
+							<h2 style="color:yellow" align="right">DESIGN?</h2>
 						    </td>
 						  </tr>
 						</table>
