--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
 							<h2>What is</h2>
 						    </td>
 						    <td style="float: right">
-							<h2 style="color:yellow" align="right">HUMAN CENTRIC</h2>
+							<h2 style="color:yellow" align="right">HUMAN</h2>
+							<h2 style="color:yellow" align="right">CENTRIC</h2>
 							<h2 style="color:yellow" align="right">DESIGN?</h2>
 						    </td>
 						  </tr>
