--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 						<table class="bio-table">
 						  <tr>
 						    <td style="float: left">
-							<h2>What is</h2>
+							<h2 align="left">What is</h2>
 						    </td>
 						    <td style="float: right">
 							<h2 style="color:yellow" align="right">HUMAN</h2>
