--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 						<h2></h2>
 						<h2></h2>
 						<h2></h2>
-						<h2>What is Architecture?</h2>
+						<h2 style="color: cyan">What is Architecture?</h2>
 					</section>
 					<section data-menu-title="What is" data-background="https://www.publickey1.jp/blog/11/agileconf1102.jpg" data-background-opacity="0.2">
 						<h2>Architecture is</h2>
