--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
 						    <td style="float: left">
 							<h2 align="left">What is</h2>
 						    </td>
+						    <td style="float: left">
+							<h2></h2>
+						    </td>
 						    <td style="float: right">
 							<h2 style="color:yellow" align="right">HUMAN</h2>
 							<h2 style="color:yellow" align="right">CENTRIC</h2>
