Adding microservices section

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 					</section>
 					<section data-menu-title="Ubiquitous Language">
 						<h2>Ubiquitous Language</h2>
-						<img src="images/ubiquitous_language.png" width="400"/>
+						<img src="images/ubiquitous_language_with_people.png" width="400"/>
 						<ul class="smaller-text">
 							<li>A language used by all team members to connect all the activities of the team</li>
 						</ul>
@@ -273,6 +273,42 @@
 					<section data-menu-title="Agile and Responsive" data-background-image="http://hdqwalls.com/wallpapers/need-for-speed-no-limits-87.jpg" data-background-opacity="1">
 						<br /><br /><br /><br /><br /><br />
 						<h2 align="left">Agile and Responsive</h2>
+					</section>
+					<section data-menu-title="Monolithics" data-background-color="black">
+						<h2>Monolithics is HUGE</h2>
+						<ul>
+							<li>Slower to compile</li>
+							<li>Slower to deploy</li>
+							<li>Slower to deliver</li>
+						</ul>
+					</section>
+					<section data-menu-title="Microservices" data-background-color="black">
+						<h2>Microservices is smaller</h2>
+					</section>
+					<section data-menu-title="Microservices" data-background-color="black">
+						<h2>But does it always enable us to deliver faster</h2>
+					</section>
+					<section data-menu-title="Microservices" data-background-color="black">
+						<h2>But does it always enable us to deliver faster?</h2>
+					</section>
+					<section data-menu-title="Microservices" data-background-color="black">
+						<h2>Symptoms of something goes wrong</h2>
+						<ul>
+							<li>Lot of deployment coordinations</li>
+							<li>Lot of testing coordinations</li>
+							<li>Longer downtime</li>
+							<li>Excessive joins between Microservices</li>
+							<li>Running costs is even higher than Monolithic</li>
+						</ul>
+					</section>
+					<section data-menu-title="Microservices" data-background-color="black">
+						<h2>Some suggestions</h2>
+						<ul>
+							<li>API versioning</li>
+							<li>end-to-end -> Consumer Contract Testing</li>
+							<li>BlueGeen Deployment, Canary Deployment</li>
+							<li>Domain Driven Design</li>
+						</ul>
 					</section>
 					<section data-menu-title="People improve through feedback" data-background-color="black">
 						<h2>People improve through</h2>
