--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
 					</section>
 					<section data-menu-title="What is" data-background="https://www.publickey1.jp/blog/11/agileconf1102.jpg" data-background-opacity="0.2">
 						<h2>Architecture is</h2>
-						<p style="color:yellow" align="left"><strong style="color:red">Shared understanding</strong> of the important stuff (e.g. Decisions)</p>
-						<p style="color:yellow" align="left">about a <strong style="color:red">system</strong></p>
+						<p style="color:yellow" align="left"><strong style="color:red">Shared understanding</strong> of the important stuff</p> <p style="color:yellow" align="left">about a <strong style="color:red">system</strong> (e.g. Decisions)</p>
 						<br>
 						<i>~Martin Fowler</i>
 						<br>
